--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,14 +1,10 @@
 <div id="loaderInitPage">
   <img src="assets/images/loader/loading-lazy.gif">
 </div>
-
-<div align="center">
-  <h1> urlSmall </h1>
-  <p>
-    urlSmall is a open source url shortener.
-  </p>
-  <!-- Follow us :
-  <a href="https://github.com/ngahane/urlSmall" target="_blank">
+<div align="center" class="header">
+  <h1> markdownEditor </h1>
+  <p> markdownEditor is a open source markdown editor designed by <strong>ngahane steve william</strong> </p>
+  <a href="https://github.com/ngahane/markdownEditor" target="_blank">
     <button class="ui github icon button">
       <i class="github icon"></i> Github
     </button>
@@ -22,47 +18,18 @@
     <button class="ui linkedin icon button">
       <i class="linkedin icon"></i> Linkedin
     </button>
-  </a> -->
+  </a>
 </div>
-<br><br>
 
-<div class="ui centered grid">
-  <div class="twelve wide tablet twelve wide computer column">
-    <div class="ui form">
-      <div class="field">
-        <label><i class="linkify icon"></i> Site Link </label>
-        <input placeholder="Here" type="text" [(ngModel)]="redirectUrl">
-      </div>
-      <br><br>
-      <div align="center">
-        <div class="ui submit primary button" (click)="saveLinks()">Generate link</div>
-        <br><br>
-        <h3 *ngIf="uniqueUrl != undefined">
-          <strong> The generated link is : </strong> <br>
-          <a href="{{uniqueUrl}}">{{uniqueUrl}}</a>
-        </h3>
-      </div>
+<div class="ui internally celled grid">
+  <div class="row">
+    <div class="eight wide column">
+      <h3>Markdown</h3>
+      <textarea id="inputField" [(ngModel)]="inputField" (ngModelChange)="generateHTML($event)"></textarea>
+    </div>
+    <div class="eight wide column">
+      <h3>Preview</h3>
+      <div id="resultField"></div>
     </div>
   </div>
-</div>
-
-<div class="footer">
-  <p>
-    Designed by <strong>ngahane steve william</strong>
-  </p>
-  <a href="https://github.com/ngahane/urlSmall" target="_blank">
-    <button class="ui github icon button">
-      <i class="github icon"></i> Github
-    </button>
-  </a>
-  <a href="mailto:ngahanestevewilliam98@gmail.com" target="_blank">
-    <button class="ui google plus icon button">
-      <i class="google plus icon"></i> Google plus
-    </button>
-  </a>
-  <a href="https://linkedin.com/in/steve-william-ngahane-6545b6137" target="_blank">
-    <button class="ui linkedin icon button">
-      <i class="linkedin icon"></i> Linkedin
-    </button>
-  </a>
 </div>
