--- a/src/app/views/home/home.component.scss
+++ b/src/app/views/home/home.component.scss
@@ -1,8 +1,12 @@
-.footer{
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    text-align: center;
-    margin-bottom: 15px;
+#inputField,
+#resultField {
+  border: 1px solid blue;
+  width: 100% !important;
+  max-width: 100% !important;
+  height: 100% !important;
+  max-height: 100% !important;
+  overflow-y: scroll !important;
+  overflow-x: unset;
+  padding: 5px;
+  border-radius: 7px;
 }
